# OwlcatMonoProfiler

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
capture_check/: CMakeLists.txt
capture_check/src/: capture_check.cpp
client/: CMakeLists.txt
client/include/: mono_profiler_client.h
client/src/: capture_container.cpp  capture_container.h  db_migrations.cpp  db_migrations.h  db_queries.cpp  db_queries.h  event_log.cpp  event_log.h  mono_profiler_client.cpp  symbol_resolver.cpp  symbol_resolver.h
cmake/: FindQwt.cmake
common/: memory_reader.h  memory_writer.h  profiler_thread.h
doc/: Rationale.md  il2cpp.md  native_hooks_example.cfg
licenses/Asio/: LICENSE
licenses/ConcurrentQueue/: LICENSE.md
logger/: CMakeLists.txt
logger/include/: logger.h
logger/src/: logger.cpp  sink_file.cpp
network/: CMakeLists.txt
network/include/: network.h
network/src/: network.cpp
persistent_storage/: CMakeLists.txt
persistent_storage/include/: persistent_storage.h
persistent_storage/src/: persistent_storage.cpp
server/: CMakeLists.txt
server/include/: dll_exports.h  mono_profiler_server.h
server/src/: dll_main.cpp  functor.h  load_library.cpp  load_library.h  mono_functions.h  mono_functions_il2cpp.cpp  mono_functions_mono.cpp  mono_profiler.cpp  mono_profiler.h  mono_profiler_server.cpp  native_hooks.cpp  native_hooks.h  worker_thread.cpp  worker_thread.h
test/: CMakeLists.txt
test/src/: mono_profiler_test.cpp  mono_profiler_test.h.cmake
ui/: CMakeLists.txt
ui/src/: band_picker.cpp  band_picker.h  byte_scale_draw.h  common_ui.h  connect_dialog.cpp  connect_dialog.h  connectdialog.ui  graphs_data.cpp  graphs_data.h  live_objects_data.cpp  live_objects_data.h  main_window.cpp  main_window.h  mainwindow.ui  mono_profiler_ui.cpp  mono_profiler_ui.h  object_references_model.cpp  object_references_model.h  run_dialog.cpp  run_dialog.h  rundialog.ui  search_results_data.cpp  search_results_data.h  symbol_paths_dialog.cpp  symbol_paths_dialog.h
unity/: OwlcatMonoProfiler.cs
unity/OwlcatMonoProfilerTest/: OwlcatMonoProfilerTest.sln
unity/OwlcatMonoProfilerTest/Assets/: MainScene.unity  ProfilerStarter.cs
unity/OwlcatMonoProfilerTest/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
